# Atividade3-LPII

./: README.md
chat-tcp/: CMakeLists.txt  README.md
chat-tcp/docs/: analise_llm.md  arquitetura.md  sequencias.md
chat-tcp/examples/: log_stress.cpp
chat-tcp/include/tslog/: tslog.hpp
chat-tcp/libs/libtslog/: CMakeLists.txt
chat-tcp/libs/libtslog/include/: tslog.hpp
chat-tcp/report/: Relatorio_etapa1_libtslog.md
chat-tcp/scripts/: mostrar_saida.sh
chat-tcp/src/client/: main_client.cpp
chat-tcp/src/common/: logging.hpp  net.hpp
chat-tcp/src/server/: ThreadSafeQueue.hpp  main_server.cpp
chat-tcp/src/tslog/: logger.cpp  sinks.cpp
chat-tcp/tools/: log_stress.cpp  logs_stress.cpp
